--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,10 @@ services:
     ports:
       - "8080:8080"
     environment:
+      APP_DEBUG: true
+      APP_ENV: local
       APP_KEY: base64:xTgSQfLMNEczscmpp9JBReATIg6btVYOXHj9yUxYdUU=
+      APP_URL: http://laravel-k8s-tf-eks.test
       CACHE_STORE: redis
       DB_CONNECTION: mysql
       DB_HOST: mysql
