--- a/helm/mysql/templates/deployment.yaml
+++ b/helm/mysql/templates/deployment.yaml
@@ -37,6 +37,8 @@ spec:
               value: {{ .Values.mysql.rootPassword | quote }}
             - name: MYSQL_DATABASE
               value: {{ .Values.mysql.database | quote }}
+            - name: MYSQL_ROOT_HOST
+              value: "%"
             {{- end }}
           resources:
             {{ toYaml .Values.resources | nindent 12 }}
