--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,13 +19,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
@@ -34,6 +27,22 @@ jobs:
       - name: Terraform Init
         working-directory: ./terraform
         run: terraform init
+
+      - name: Get Config Values
+        id: ecr
+        working-directory: ./terraform
+        run: |
+          echo "ECR_REPOSITORY=$(terraform output -raw repository_name)" >> $GITHUB_ENV
+          echo "ECR_REPOSITORY_URL=$(terraform output -raw ecr_repository_url)" >> $GITHUB_ENV
+          echo "IAM_DEPLOY_ROLE=$(terraform output -raw deploy_role_arn)" >> $GITHUB_ENV
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: ${{ env.IAM_DEPLOY_ROLE }}
 
       - name: Terraform Plan
         id: plan
@@ -50,13 +59,6 @@ jobs:
         run: terraform apply -auto-approve tfplan
         env:
           TF_VAR_region: ${{ env.AWS_REGION }}
-
-      - name: Get ECR Repository Information
-        id: ecr
-        working-directory: ./terraform
-        run: |
-          echo "ECR_REPOSITORY=$(terraform output -raw repository_name)" >> $GITHUB_ENV
-          echo "ECR_REPOSITORY_URL=$(terraform output -raw ecr_repository_url)" >> $GITHUB_ENV
 
       - name: Login to Amazon ECR
         run: |
