--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,8 +22,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-session-name: github-actions
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Setup Terraform
@@ -41,7 +41,6 @@ jobs:
         run: |
           echo "ECR_REPOSITORY=$(terraform output -raw repository_id)" >> $GITHUB_ENV
           echo "ECR_REPOSITORY_URL=$(terraform output -raw ecr_repository_url)" >> $GITHUB_ENV
-          echo "IAM_DEPLOY_ROLE=$(terraform output -raw deploy_role_arn)" >> $GITHUB_ENV
 
       - name: Terraform Plan
         id: plan
