--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,8 @@ jobs:
   terraform:
     name: Deploy Application
     runs-on: ubuntu-latest
+    env:
+      TF_VAR_region: ${{ env.AWS_REGION }}
 
     permissions:
       id-token: write
@@ -25,8 +27,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          role-session-name: github-actions
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Setup Terraform
@@ -38,28 +40,15 @@ jobs:
         working-directory: ./terraform
         run: terraform init
 
-      - name: Get Config Values
-        id: ecr
+      - name: Terraform Setup ECR
+        working-directory: ./terraform
+        run: terraform apply -auto-approve -target=module.ecr
+
+      - name: Terraform Output
         working-directory: ./terraform
         run: |
-          echo "ECR_REPOSITORY=$(terraform output -raw repository_id)" >> $GITHUB_ENV
+          echo "ECR_REPOSITORY=$(terraform output -raw ecr_repository_name)" >> $GITHUB_ENV
           echo "ECR_REPOSITORY_URL=$(terraform output -raw ecr_repository_url)" >> $GITHUB_ENV
-
-      - name: Terraform Plan
-        id: plan
-        working-directory: ./terraform
-        run: |
-          terraform plan -out=tfplan -detailed-exitcode
-          echo "PLAN_EXIT_CODE=$?" >> $GITHUB_ENV
-        env:
-          TF_VAR_region: ${{ env.AWS_REGION }}
-
-      - name: Terraform Apply
-        if: env.PLAN_EXIT_CODE == '2'
-        working-directory: ./terraform
-        run: terraform apply -auto-approve tfplan
-        env:
-          TF_VAR_region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
         run: |
@@ -76,3 +65,14 @@ jobs:
       - name: Push Docker Image to ECR
         run: |
           docker push ${{ env.ECR_REPOSITORY_URL }}}:latest
+
+      - name: Terraform Plan Full Deploy
+        working-directory: ./terraform
+        run: |
+          terraform plan -out=tfplan -detailed-exitcode
+          echo "PLAN_EXIT_CODE=$?" >> $GITHUB_ENV
+
+      - name: Terraform Apply Infra
+        if: env.PLAN_EXIT_CODE == '2'
+        working-directory: ./terraform
+        run: terraform apply -auto-approve tfplan
